demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-deployment 
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
